# Reliaquest-Greymatter-MCP-Server

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  REMEDIATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ENDPOINTS.md  reliaquest-api-issues.md
docs/superpowers/plans/: 2026-06-08-greymatter-mcp-server.md
docs/superpowers/specs/: 2026-06-08-greymatter-mcp-server-design.md
schema/: schema.graphql
scripts/: generate_from_collection.py  introspect.py  run.ps1  run.sh  setup.ps1  setup.sh
src/greymatter_mcp/: __init__.py  client.py  config.py  errors.py  server.py
src/greymatter_mcp/tools/: __init__.py  _common.py  graphql.py
src/greymatter_mcp/tools/_generated/: __init__.py  access_groups.py  api_keys.py  assets.py  cases.py  customer.py  data.py  detections.py  discover_tasks.py  drp_access_control.py  drp_alerts.py  emergency_contacts.py  fields.py  identities.py  incidents.py  indicators.py  playbooks.py  query_management.py  reference_lists.py  tasks.py  user.py  user_activity.py  utilities.py
tests/: test_client.py  test_common.py  test_config.py  test_errors.py  test_generated_documents.py  test_generator.py  test_generator_path.py  test_graphql_tool.py  test_registration.py  test_server.py
tests/fixtures/: mini_collection.json
