[project]
name = "greymatter-mcp"
version = "0.1.3"
description = "MCP server for the ReliaQuest GreyMatter GraphQL API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = []
authors = [
    { name = "Kierston Grantham", email = "Space-C0wboy@users.noreply.github.com" },
]
keywords = ["mcp", "reliaquest", "greymatter", "security", "soc", "graphql", "ai-tools", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.6.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/Space-C0wboy/Reliaquest-Greymatter-MCP-Server"
Repository = "https://github.com/Space-C0wboy/Reliaquest-Greymatter-MCP-Server"
Issues = "https://github.com/Space-C0wboy/Reliaquest-Greymatter-MCP-Server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<2.0",
    "pytest-httpx>=0.30.0,<1.0",
    "ruff>=0.4.0,<1.0",
]

[project.scripts]
greymatter-mcp = "greymatter_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greymatter_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["greymatter_mcp"]

[tool.ruff.lint.per-file-ignores]
"src/greymatter_mcp/tools/_generated/*" = ["E", "W", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
